--- a/pages/Accessories/accessories.html
+++ b/pages/Accessories/accessories.html
@@ -49,7 +49,7 @@
                           <ul class="dropdown-menu dropdown-menu-dark">
                               <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
                               <li><a href="../components/components.html" class="dropdown-item active">Cards and Components</a></li>
-                              <li><a href="#" class="dropdown-item">Desktops</a></li>
+                              <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
                           </ul>
                       </li>
                       <li class="nav-item">
@@ -101,14 +101,14 @@
             <div class="container-lg m-lg-auto  text-center text-capitalize">
                 <div class="row d-flex justify-content-center flex-wrap pt-5">
                     <div class="col-4">
-                        <a href="./sub-categories/gaming-headset.html" class="text-decoration-none">
+                        <a href="../Accessories/gaming-headset.html" class="text-decoration-none">
                             <img src="./images/image-1.jpg" alt="">
                             <h4>Gaming Headset</h4>
                         </a>
                     </div>
 
                     <div class="col-4">
-                        <a href="./sub-categories/gaming-mouse.html" class="text-decoration-none">
+                        <a href="../Accessories/gaming-mouse.html" class="text-decoration-none">
                             <img src="./images/image-2.jpg" alt="">
                             <h4>Gaming Mouse</h4>
                         </a>
@@ -116,28 +116,28 @@
 
 
                     <div class="col-4">
-                        <a href="./sub-categories/keyboard.html" class="text-decoration-none">
+                        <a href="../Accessories/keyboard.html" class="text-decoration-none">
                             <img src="./images/image-3.jpg" alt="">
                             <h4>Gaming Keyboard</h4>
                         </a>
                     </div>
 
                     <div class="col-4">
-                        <a href="#" class="text-decoration-none">
+                        <a href="../Accessories/gaming-monitor.html" class="text-decoration-none">
                             <img src="./images/image-4.jpg" alt="">
                             <h4>Gaming Monitor</h4>
                         </a>
                     </div>
                     <!-- Second row -->
                     <div class="col-4">
-                        <a href="#" class="text-decoration-none">
+                        <a href="../Accessories/gaming-speakers.html" class="text-decoration-none">
                             <img src="./images/image-5.jpg" alt="">
                             <h4>Gaming Speakers</h4>
                         </a>
                     </div>
 
                     <div class="col-4">
-                        <a href="./sub-categories/controllers.html" class="text-decoration-none">
+                        <a href="../Accessories/controllers.html" class="text-decoration-none">
                             <img src="./images/image-6.jpg" alt="">
                             <h4>Gaming Controllers</h4>
                         </a>
@@ -145,14 +145,14 @@
 
 
                     <div class="col-4">
-                        <a href="#" class="text-decoration-none">
+                        <a href="../Accessories/gaming-chair.html" class="text-decoration-none">
                             <img src="./images/image-7.jpg" alt="">
                             <h4>Gaming Chair</h4>
                         </a>
                     </div>
 
                     <div class="col-4">
-                        <a href="#" class="text-decoration-none">
+                        <a href="../Accessories/gaming-eyewear.html" class="text-decoration-none">
                             <img src="./images/images-8.jpg" alt="">
                             <h4>Gaming Eyewear</h4>
                         </a>
