--- a/pages/Accessories/gaming-chair.html
+++ b/pages/Accessories/gaming-chair.html
@@ -112,7 +112,7 @@
         <div class="row d-flex justify-content-center">
             <div class="col-4 d-flex flex-column">
                 <div class="product-title-star flex-grow-1">
-                    <a href="../Accessories/product-details/chair-details.html" class="text-decoration-none">
+                    <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../Accessories/images/chair-1.jpg">
                         <h4>Razer Iskur - Black/Green Gaming chair with built in Lumbar support</h4>
