--- a/pages/desktop/desktop.html
+++ b/pages/desktop/desktop.html
@@ -13,8 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../products/styles/product.css" />
-    <link rel="stylesheet" href="../products/styles/header.css">
+
+    <link rel="stylesheet" href="../desktop/desktop.css" />
+    <link rel="stylesheet" href="../home/styles/header.css">
+    <link rel="stylesheet" href="../home/styles/footer.css">
 
     <title>Desktop</title>
   </head>
@@ -49,8 +51,8 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
-                                    <li><a href="#" class="dropdown-item">Cards and Components</a></li>
-                                    <li><a href="#" class="dropdown-item">Desktops</a></li>
+                                    <li><a href="../components/components.html" class="dropdown-item">Cards and Components</a></li>
+                                    <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -85,8 +87,8 @@
         <div class="container-lg banner ">
             <div class="row-cols-md-2 d-flex align-items-center flex-wrap justify-content-around m-4 banner-row ">
                 <div class="col-6">
-                    <h1>Gaming Desktops</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur Lorem, ipsum, <br>Lorem ipsum dolor sit... </p>
+                    <h1 class="text-white">Gaming Desktops</h1>
+                    <p class="text-white">Lorem ipsum dolor sit amet consectetur Lorem, ipsum, <br>Lorem ipsum dolor sit... </p>
                 </div>
                 <div class="col-6 banner-image">
                 </div>
@@ -103,7 +105,7 @@
         <div class="row d-flex justify-content-center">
             <div class="col-4 d-flex flex-column">
                 <div class="product-title-star flex-grow-1">
-                    <a href="../products/product-2.html" class="text-decoration-none">
+                    <a href="../desktop/product-2.html" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../images/6.jpg" >
                         <h4>iBUYPOWER Y60 Gaming Desktop - Intel i7-12700KF - 16GB DDR4 Memory - NVIDIA GeForce RTX 3070 Ti - 1TB NVMe SSD - Black
