--- a/pages/Accessories/gaming-monitor.html
+++ b/pages/Accessories/gaming-monitor.html
@@ -112,7 +112,7 @@
         <div class="row d-flex justify-content-center">
             <div class="col-4 d-flex flex-column">
                 <div class="product-title-star flex-grow-1">
-                    <a href="../Accessories/product-details/monitor-details.html" class="text-decoration-none">
+                    <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../Accessories/images/monitor-12.jpg">
                         <h4>OC C27G2Z 27" Curved Frameless Ultra-Fast Gaming Monitor, FHD 1080p, 0.5ms 240Hz, FreeSync,
