--- a/pages/Accessories/gaming-speakers.html
+++ b/pages/Accessories/gaming-speakers.html
@@ -110,7 +110,7 @@
     <div class="row d-flex justify-content-center">
         <div class="col-4 d-flex flex-column">
             <div class="product-title-star flex-grow-1">
-                <a href="../Accessories/product-details/speaker-details.html" class="text-decoration-none">
+                <a href="#" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                     <img src="../Accessories/images/speaker-1.jpg" >
                     <h4>Logitech G560 Lightsnyc Gaming Speaker</h4>
