--- a/pages/Accessories/accessories.html
+++ b/pages/Accessories/accessories.html
@@ -47,8 +47,8 @@
                               Products
                           </a>
                           <ul class="dropdown-menu dropdown-menu-dark">
-                              <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
-                              <li><a href="../components/components.html" class="dropdown-item active">Cards and Components</a></li>
+                              <li><a href="../Accessories/accessories.html" class="dropdown-item active">Accessories</a></li>
+                              <li><a href="../components/components.html" class="dropdown-item ">Cards and Components</a></li>
                               <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
                           </ul>
                       </li>
