--- a/pages/Accessories/accessories.html
+++ b/pages/Accessories/accessories.html
@@ -40,7 +40,7 @@
                   </label>
                   <ul class="first-ul d-flex list-unstyled mb-0" id="mainmenu">
                       <li class="nav-item">
-                          <a href="#" class="nav-link ">Home</a>
+                          <a href="../home/home.html" class="nav-link ">Home</a>
                       </li>
                       <li class="nav-item dropdown">
                           <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
