--- a/pages/Accessories/accessories.html
+++ b/pages/Accessories/accessories.html
@@ -28,7 +28,7 @@
           <div class="col-6">
               <div class="logo">
                   <a href="#">
-                      <img src="../home/images/logo2.png" width="150">
+                      <img src="../home/images/logo-white.png" width="150">
                   </a>
               </div>
           </div>
