added product details

--- a/pages/Accessories/gaming-speakers.html
+++ b/pages/Accessories/gaming-speakers.html
@@ -54,7 +54,7 @@
                             <a href="#" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="../contact/contact.html" class="nav-link">Contact</a>
                         </li>
                         <li class="nav-item d-flex justify-content-center mx-auto">
                             <a href="#" class="nav-link d-flex">
@@ -110,7 +110,7 @@
     <div class="row d-flex justify-content-center">
         <div class="col-4 d-flex flex-column">
             <div class="product-title-star flex-grow-1">
-                <a href="#" class="text-decoration-none">
+                <a href="../products/gaming-speaker.html" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                     <img src="../Accessories/images/speaker-1.jpg" >
                     <h4>Logitech G560 Lightsnyc Gaming Speaker</h4>
