--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -57,7 +57,7 @@
                                 <a href="#" class="nav-link">About</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Contact</a>
+                                <a href="../contact/contact.html" class="nav-link">Contact</a>
                             </li>
                             <li class="nav-item d-flex justify-content-center mx-auto">
                                 <a href="#" class="nav-link d-flex">
@@ -108,7 +108,7 @@
                     <h2 class="title" >Categories</h2>
                     <div class="col-3">
                         <h4 class="vanishing-featured-title text-center"><span class="text-muted px-1">Computer </span>Cards <i class="bi bi-cpu text-white px-2"></i></h4>
-                        <a href="../products/product-1.html" class="text-decoration-none">
+                        <a href="../components/components.html" class="text-decoration-none">
                             <div class="featured-cards d-flex align-items-center justify-content-center">
                                 <div class="overlay d-flex align-items-center justify-content-center">
                                     <div class="featured-title">
@@ -120,7 +120,7 @@
                     </div>
                     <div class="col-3">
                         <h4 class="vanishing-featured-title"><span class="text-muted">Desk</span>tops <i class="bi bi-display px-2 text-white"></i></h4>
-                        <a href="#" class="text-decoration-none">
+                        <a href="../desktop/desktop.html" class="text-decoration-none">
                             <div class="featured-desktops d-flex align-items-center justify-content-center">
                                 <div class="overlay d-flex align-items-center justify-content-center">
                                     <div class="featured-title">
