--- a/pages/products/mouse-details.html
+++ b/pages/products/mouse-details.html
@@ -15,7 +15,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../styles/products-details.css">
+  <link rel="stylesheet" href="../Accessories/styles/products-details.css">
+  <link rel="stylesheet" href="../products/styles/header.css">
 
 
   <title>ROCCAT - Burst Pro Lightweight Wired Optical Gaming Mouse with 16K DPI Owl-Eye Sensor and Titan Wheel - Black -
@@ -32,7 +33,7 @@
         <div class="col-6">
           <div class="logo">
             <a href="#">
-              <img src="../images/logo.png" width="150">
+              <img src="../home/images/logo-white.png" width="150">
             </a>
           </div>
         </div>
@@ -56,14 +57,14 @@
                   </li>
                   <li><a href="../components/components.html" class="dropdown-item active">Cards and
                       Components</a></li>
-                  <li><a href="#" class="dropdown-item">Desktops</a></li>
+                  <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
                 </ul>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link">About</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
+                <a href="../contact/contact.html" class="nav-link">Contact</a>
               </li>
               <li class="nav-item d-flex justify-content-center mx-auto">
                 <a href="#" class="nav-link d-flex">
@@ -91,19 +92,19 @@
   <div class="container-lg mx-auto product-page">
     <div class="row product-page-row">
       <div class="col-6 d-flex flex-column align-items-center my-auto">
-        <img src="../images/product2-1.jpg" width="100%" id="productImage">
+        <img src="../Accessories/images/product2-1.jpg" width="100%" id="productImage">
         <div class="row small-img-container d-flex justify-content-inherit ">
           <div class="col-3">
-            <img src="../images/product2-1.jpg" width="100%" class="small-image">
+            <img src="../Accessories/images/product2-1.jpg" width="100%" class="small-image">
           </div>
           <div class="col-3">
-            <img src="../images/mouse-p.2.webp" width="100%" class="small-image">
+            <img src="../Accessories/images/mouse-p.2.webp" width="100%" class="small-image">
           </div>
           <div class="col-3">
-            <img src="../images/mouse-p.4.jpeg" width="100%" class="small-image">
+            <img src="../Accessories/images/mouse-p.4.jpeg" width="100%" class="small-image">
           </div>
           <div class="col-3">
-            <img src="../images/mouse-p.3.jpg" width="100%" class="small-image">
+            <img src="../Accessories/images/mouse-p.3.jpg" width="100%" class="small-image">
           </div>
         </div>
       </div>
@@ -303,7 +304,7 @@
         <div class="product-title-star flex-grow-1">
           <a href="#" class="text-decoration-none">
             <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-            <img src="../images/product2-8.jpg">
+            <img src="../Accessories/images/product2-8.jpg">
             <h4>CORSAIR - Scimitar RGB Elite Wired Optical Gaming Mouse with 17 Programmable Buttons - Black</h4>
           </a>
         </div>
@@ -332,7 +333,7 @@
         <div class="product-title-star flex-grow-1">
           <a href="#" class="text-decoration-none">
             <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-            <img src="../images/product2-11.jpg">
+            <img src="../Accessories/images/product2-11.jpg">
             <h4>ROCCAT Kone XP Air Wireless Optical Gaming Mouse with Charging Dock and AIMO RGB Lighting - Black</h4>
           </a>
         </div>
@@ -361,7 +362,7 @@
         <div class="product-title-star flex-grow-1">
           <a href="#" class="text-decoration-none">
             <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-            <img src="../images/product2-6.jpg">
+            <img src="../Accessories/images/product2-6.jpg">
             <h4>HyperX - Pulsefire Haste Lightweight Wired Optical Gaming Mouse with RGB Lighting - Red and black
             </h4>
           </a>
@@ -390,7 +391,7 @@
         <div class="product-title-star flex-grow-1">
           <a href="#" class="text-decoration-none">
             <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-            <img src="../images/product2-2.jpg">
+            <img src="../Accessories/images/product2-2.jpg">
             <h4>Logitech - G502 HERO Wired Optical Gaming Mouse with RGB Lighting - Black</h4>
           </a>
         </div>
@@ -502,7 +503,7 @@
       <div class="row d-flex justify-content-center align-items-start pt-4 ">
         <div class="col-3">
           <a href="#">
-            <img src="../images/logo-white2.png" class="mb-3">
+            <img src="../Accessories/images/logo-white2.png" class="mb-3">
           </a>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, deserunt.</p>
         </div>
