--- a/pages/Accessories/accessories.html
+++ b/pages/Accessories/accessories.html
@@ -56,7 +56,7 @@
                           <a href="#" class="nav-link">About</a>
                       </li>
                       <li class="nav-item">
-                          <a href="#" class="nav-link">Contact</a>
+                          <a href="../contact/contact.html" class="nav-link">Contact</a>
                       </li>
                       <li class="nav-item d-flex justify-content-center mx-auto">
                           <a href="#" class="nav-link d-flex">
