--- a/pages/Accessories/controllers.html
+++ b/pages/Accessories/controllers.html
@@ -58,7 +58,7 @@
                                 <a href="#" class="nav-link">About</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Contact</a>
+                                <a href="../contact/contact.html" class="nav-link">Contact</a>
                             </li>
                             <li class="nav-item d-flex justify-content-center mx-auto">
                                 <a href="#" class="nav-link d-flex">
@@ -112,7 +112,7 @@
         <div class="row d-flex justify-content-center">
             <div class="col-4 d-flex flex-column">
                 <div class="product-title-star flex-grow-1">
-                    <a href="../Accessories/products-details/controller-details.html" class="text-decoration-none">
+                    <a href="../products/controller-details.html" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../Accessories/images/conts-p.webp">
                         <h4>SCUF Instinct Pro Wireless Performance Controller for Xbox Series X|S, Xbox One, PC, and
