--- a/pages/Accessories/gaming-monitor.html
+++ b/pages/Accessories/gaming-monitor.html
@@ -58,7 +58,7 @@
                                 <a href="#" class="nav-link">About</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Contact</a>
+                                <a href="../contact/contact.html" class="nav-link">Contact</a>
                             </li>
                             <li class="nav-item d-flex justify-content-center mx-auto">
                                 <a href="#" class="nav-link d-flex">
@@ -112,7 +112,7 @@
         <div class="row d-flex justify-content-center">
             <div class="col-4 d-flex flex-column">
                 <div class="product-title-star flex-grow-1">
-                    <a href="#" class="text-decoration-none">
+                    <a href="../products/gaming-monitor.html" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../Accessories/images/monitor-12.jpg">
                         <h4>OC C27G2Z 27" Curved Frameless Ultra-Fast Gaming Monitor, FHD 1080p, 0.5ms 240Hz, FreeSync,
