--- a/pages/Accessories/gaming-mouse.html
+++ b/pages/Accessories/gaming-mouse.html
@@ -59,7 +59,7 @@
                                 <a href="#" class="nav-link">About</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Contact</a>
+                                <a href="../contact/contact.html" class="nav-link">Contact</a>
                             </li>
                             <li class="nav-item d-flex justify-content-center mx-auto">
                                 <a href="#" class="nav-link d-flex">
@@ -113,7 +113,7 @@
         <div class="row d-flex justify-content-center">
             <div class="col-4 d-flex flex-column">
                 <div class="product-title-star flex-grow-1">
-                    <a href="../Accessories/products-details/mouse-details.html" class="text-decoration-none">
+                    <a href="../products/mouse-details.html" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../Accessories/images/product2-1.jpg">
                         <h4>ROCCAT - Burst Pro Lightweight Wired Optical Gaming Mouse with 16K DPI Owl-Eye Sensor and
