--- a/pages/desktop/desktop.html
+++ b/pages/desktop/desktop.html
@@ -59,7 +59,7 @@
                                 <a href="#" class="nav-link">About</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Contact</a>
+                                <a href="../contact/contact.html" class="nav-link">Contact</a>
                             </li>
                             <li class="nav-item d-flex justify-content-center mx-auto">
                                 <a href="#" class="nav-link d-flex">
@@ -108,8 +108,7 @@
                     <a href="../desktop/product-2.html" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../images/6.jpg" >
-                        <h4>iBUYPOWER Y60 Gaming Desktop - Intel i7-12700KF - 16GB DDR4 Memory - NVIDIA GeForce RTX 3070 Ti - 1TB NVMe SSD - Black
-                            Model:Y60BB2090SKU:6500572</h4>
+                        <h4>iBUYPOWER Y60 Gaming Desktop - Intel i7-12700KF - 16GB DDR4 Memory - NVIDIA GeForce RTX 3070 Ti - 1TB NVMe SSD - Black</h4>
                     </a>
                 </div>
                 <div class="product-price-cart">
@@ -137,9 +136,7 @@
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../images/2.jpg" >
-                        <h4>CyberPowerPC - Gamer Supreme Gaming Desktop - AMD Ryzen 7 5700 - 16GB Memory - NVIDIA GeForce RTX 3070 - 1TB SSD - White
-                          Model: SLC8600BSTV4
-                          SKU: 6500513</h4>
+                        <h4>CyberPowerPC - Gamer Supreme Gaming Desktop - AMD Ryzen 7 5700 - 16GB Memory - NVIDIA GeForce RTX 3070 - 1TB SSD - White</h4>
                     </a>
                 </div>
                 <div class="product-price-cart">
@@ -167,9 +164,7 @@
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../images/3.jpg" >
-                        <h4>iBUYPOWER - SlateMESH Gaming Desktop - Intel i7-12700F - 16GB DDR4 Memory - NVIDIA GeForce RTX 3060 - 1TB HDD + 500 NVMe GB SSD - Black
-                          Model: SlateMESH2070
-                          SKU: 6500569</h4>
+                        <h4>iBUYPOWER - SlateMESH Gaming Desktop - Intel i7-12700F - 16GB DDR4 Memory - NVIDIA GeForce RTX 3060 - 1TB HDD + 500 NVMe GB SSD - Black</h4>
                     </a>
                 </div>
                 <div class="product-price-cart">
@@ -197,9 +192,7 @@
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../images/4,4.jpg" >
-                        <h4>CLX - SET Gaming Desktop - AMD Ryzen 9 5900X - 64GB Memory - NVIDIA GeForce RTX 3080 - 1TB NVMe SSD + 6TB HDD - Black
-                          Model: TGMSETRTH0B25BM
-                          SKU: 6441381</h4>
+                        <h4>CLX - SET Gaming Desktop - AMD Ryzen 9 5900X - 64GB Memory - NVIDIA GeForce RTX 3080 - 1TB NVMe SSD + 6TB HDD - Black</h4>
                     </a>
                 </div>
                 <div class="product-price-cart">
@@ -227,8 +220,7 @@
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../images/5,5.jpg" >
-                        <h4>Alienware Aurora R13 Gaming Desktop - Intel Core i7 - 16GB Memory - NVIDIA GeForce RTX 3070 - 1TB SSD - Liquid Cooling - Lunar Light
-                          Model:AWAUR13-7400WHT-PUSSKU:6516611</h4>
+                        <h4>Alienware Aurora R13 Gaming Desktop - Intel Core i7 - 16GB Memory - NVIDIA GeForce RTX 3070 - 1TB SSD - Liquid Cooling - Lunar Light</h4>
                     </a>
                 </div>
                 <div class="product-price-cart">
@@ -256,8 +248,7 @@
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../images/1,1,1.jpg" >
-                        <h4>CLX - SET Gaming Desktop - AMD Ryzen 5 3600 - 16GB Memory - NVIDIA GeForce RTX 3060 Ti - 240GB SSD + 2TB HDD
-                            Model:TGMSETRTM0C00BM SKU:6444778</h4>
+                        <h4>CLX - SET Gaming Desktop - AMD Ryzen 5 3600 - 16GB Memory - NVIDIA GeForce RTX 3060 Ti - 240GB SSD + 2TB HDD</h4>
                     </a>
                 </div>
                 <div class="product-price-cart">
@@ -285,8 +276,7 @@
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../images/7.jpg" >
-                        <h4>iBUYPOWER TraceMR Gaming Desktop - Intel i7-12700KF - 16GB DDR4 Memory - NVIDIA GeForce RTX 3080 - 1TB NVMe SSD - Black
-                          Model:TraceMR2040SKU:6500566</h4>
+                        <h4>iBUYPOWER TraceMR Gaming Desktop - Intel i7-12700KF - 16GB DDR4 Memory - NVIDIA GeForce RTX 3080 - 1TB NVMe SSD - Black</h4>
                     </a>
                 </div>
                 <div class="product-price-cart">
@@ -314,8 +304,7 @@
                     <a href="#" class="text-decoration-none">
                         <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                         <img src="../images/8,8.jpg" >
-                        <h4>Skytech Gaming - Prism II Gaming PC i7-11700K - 32G RGB Memory - NVIDIA GeForce RTX 3080 - 1TB Gen4 SSD - 360mm AIO - White
-                          Model:ST-PRISM2W-0285-BUSKU:6471869</h4>
+                        <h4>Skytech Gaming - Prism II Gaming PC i7-11700K - 32G RGB Memory - NVIDIA GeForce RTX 3080 - 1TB Gen4 SSD - 360mm AIO - White</h4>
                     </a>
                 </div>
                 <div class="product-price-cart">
@@ -342,8 +331,7 @@
                   <a href="#" class="text-decoration-none">
                       <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                       <img src="../images/9,9.jpg" >
-                      <h4>CLX - SET Gaming Desktop - AMD Ryzen 9 7950X - 64GB DDR5 4800 Memory - GeForce RTX 4090 - 1TB M.2 NVMe SSD + 6TB HDD - White
-                        Model:TGMSETRTH2A04WMSKU:6523805</h4>
+                      <h4>CLX - SET Gaming Desktop - AMD Ryzen 9 7950X - 64GB DDR5 4800 Memory - GeForce RTX 4090 - 1TB M.2 NVMe SSD + 6TB HDD - White</h4>
                   </a>
               </div>
               <div class="product-price-cart">
@@ -370,8 +358,7 @@
                 <a href="#" class="text-decoration-none">
                     <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                     <img src="../images/10.jpg" >
-                    <h4>Acer - Predator Orion 5000 Gaming Desktop - Intel Core i7-12700F - 16GB DDR5 Memory - NVIDIA GeForce RTX 3080 - 1TB Gen 4 SSD
-                      Model:PO5-640-UB12SKU:6500695</h4>
+                    <h4>Acer - Predator Orion 5000 Gaming Desktop - Intel Core i7-12700F - 16GB DDR5 Memory - NVIDIA GeForce RTX 3080 - 1TB Gen 4 SSD</h4>
                 </a>
             </div>
             <div class="product-price-cart">
