adding path for categories

--- a/pages/desktop/categories.html
+++ b/pages/desktop/categories.html
@@ -85,7 +85,7 @@
         <div class="container-lg banner ">
             <div class="row-cols-md-2 d-flex align-items-center flex-wrap justify-content-around m-4 banner-row ">
                 <div class="col-6">
-                    <h1>Computer Cards and Components</h1>
+                    <h1>GAMING DESKTOP</h1>
                     <p>Graphics Processing Unit (GPU), Random Access Memory, <br>Processor and many more.. </p>
                 </div>
                 <div class="col-6 banner-image">
