--- a/pages/Accessories/gaming-chair.html
+++ b/pages/Accessories/gaming-chair.html
@@ -51,7 +51,7 @@
                                     <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
                                     <li><a href="../components/components.html" class="dropdown-item active">Cards and
                                             Components</a></li>
-                                    <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
+                                    <li><a href="../desktop/categories.html" class="dropdown-item">Desktops</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
