--- a/pages/Accessories/gaming-mouse.html
+++ b/pages/Accessories/gaming-mouse.html
@@ -52,7 +52,7 @@
                                             class="dropdown-item active">Accessories</a></li>
                                     <li><a href="../components/components.html" class="dropdown-item ">Cards and
                                             Components</a></li>
-                                    <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
+                                    <li><a href="../desktop/categories.html" class="dropdown-item">Desktops</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
