--- a/pages/Accessories/gaming-speakers.html
+++ b/pages/Accessories/gaming-speakers.html
@@ -47,7 +47,7 @@
                             <ul class="dropdown-menu dropdown-menu-dark">
                                 <li><a href="../Accessories/accessories.html" class="dropdown-item active">Accessories</a></li>
                                 <li><a href="../components/components.html" class="dropdown-item ">Cards and Components</a></li>
-                                <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
+                                <li><a href="../desktop/categories.html" class="dropdown-item">Desktops</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
