--- a/pages/products/product-1.html
+++ b/pages/products/product-1.html
@@ -56,7 +56,7 @@
                                     </li>
                                     <li><a href="../components/components.html" class="dropdown-item active">Cards and
                                             Components</a></li>
-                                    <li><a href="#" class="dropdown-item">Desktops</a></li>
+                                    <li><a href="../desktop/categories.html" class="dropdown-item">Desktops</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
