--- a/pages/products/gaming-monitor.html
+++ b/pages/products/gaming-monitor.html
@@ -92,10 +92,10 @@
     <div class="container-lg mx-auto product-page">
         <div class="row product-page-row">
             <div class="col-6 d-flex flex-column align-items-center my-auto">
-                <img src="../Accessories/images/monitor-1a.jpg" width="100%" id="productImage">
-                <div class="row small-img-container d-flex justify-content-inherit ">
+                <img src="../Accessories/images/monitor-1a.jpg" width="50%" id="productImage">
+                <div class="row small-img-container d-flex justify-content-inherit pt-5">
                     <div class="col-3">
-                        <img src="../Accessories/images/monitor-1a.jpg" width="100%" class="small-image">
+                        <img src="../Accessories/images/monitor-1a.jpg" width="50%" class="small-image">
                     </div>
                     <div class="col-3">
                         <img src="../Accessories/images/monitor-1b.jpg" width="100%" class="small-image">
