--- a/pages/desktop/desktop.html
+++ b/pages/desktop/desktop.html
@@ -43,7 +43,7 @@
                         </label>
                         <ul class="first-ul d-flex list-unstyled mb-0" id="mainmenu">
                             <li class="nav-item">
-                                <a href="#" class="nav-link active">Home</a>
+                                <a href="#" class="nav-link">Home</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -52,7 +52,7 @@
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
                                     <li><a href="../components/components.html" class="dropdown-item">Cards and Components</a></li>
-                                    <li><a href="../desktop/categories.html" class="dropdown-item">Desktops</a></li>
+                                    <li><a href="../desktop/categories.html" class="dropdown-item active">Desktops</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
